# mitt

./: Cargo.toml  README
src/: errors.rs  main.rs
src/controller/: friend.rs  mod.rs  user.rs
src/domain/: mod.rs
src/domain/dto/: mod.rs
src/domain/mapper/: mod.rs  sys_friendships.rs  sys_user.rs
src/domain/table/: friendships.rs  mod.rs  user.rs
src/domain/vo/: friendships.rs  jwt.rs  mod.rs
src/service/: friendships.rs  mod.rs  user.rs
src/util/: mod.rs
