[package]
name = "untitled1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbs = "4.3.2"
rbatis = { version = "4.3.10", features = [] }
rbdc = "4.3.10"
rbdc-mysql = "4.3.6"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.9.22"
log = "0.4.20"
fast_log = { version = "1.6.10", features = ["lz4","zip","gzip"] }
ntex = { version = "0.7.2", features = ["tokio"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
jsonwebtoken = "8.3.0"
md5 = "0.7.0"
once_cell = "1.18.0"
futures-util = "0.3.21"
futures = "0.3.28"
clia-ntex-cors = "0.4.0"
amqprs = "1.4.1"